Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52001

Android: EnableHighDpiScaling breaks pan/resize/overlap of edit controls on Android's

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.1
    • 5.6.0
    • QPA
    • None
    • Android

    Description

      When EnableHighDpiScaling is enabled, qGuiApp->inputMethod()->inputItemRectangle() returns the position divided by pixel density, therefore all the controls positions must by multiplied by pixel density to translate them into screen coordinates.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            taipan BogDan Vatra
            taipan BogDan Vatra
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes